Revert "将库更新到1.21.10的版本"
This reverts commit eff8d64aed48a5d383850ab78be57fbe34adcd63.